fixing the shit

--- a/views/allComplaints.ejs
+++ b/views/allComplaints.ejs
@@ -5,7 +5,7 @@
     <div class="container is-max-desktop">
         <div class="notification is-primary">
             <div class="table-container">
-                <table class="table is-hoverable is-striped">
+                <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
                     <thead>
                         <tr>
                         <td>ID</td>
