--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,7 +2,7 @@ body{
   text-align: center;
   
   color: aliceblue;
-  background: linear-gradient(-45deg, #c7a40b, #e73c7e, #23a6d5, #23d5ab, rgb(189, 189, 6));
+  background: linear-gradient(-45deg, rgb(218, 185, 1), rgb(4, 155, 224));
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
