--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
 <body>
     <!--Hey! This is the original version
 of Simple CSS Waves-->
-    <h1 class="title">Welcome to the Madhuban Bapudham Police Station Digital</h1>
+    <h1 class="title">Welcome to the Madhuban Bapudham Police Station Digital App</h1>
     <figure class="image is-128x128" id="logos">
         <img src="/img/up-logo.png">
       </figure>
@@ -13,14 +13,14 @@ of Simple CSS Waves-->
         <img src="/img/up-police-logo.png">
       </figure>
     <div class="columns is-desktop ">
-        <div class="column is-half is-offset-one-quarter">
+        <div class="column is-one-third is-offset-4">
             <div class="card">
                 <div class="card-image">
                 
                 </div>
                 <div class="card-content">
                   
-                    <form class="box" method="post" action="/newComplaint">
+                    <form class="box" method="post" action="/allComplaints">
                         <div class="field">
                           <label class="label">Please enter your Name:</label>
                           <div class="control">
@@ -51,7 +51,7 @@ of Simple CSS Waves-->
 
                         
                       
-                        <button class="button is-primary">Submit</button>
+                        <button class="button is-link">Submit</button>
                       </form>
                     </div>
                   </div>
