--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,17 +21,42 @@
         <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-start">
             <a class="navbar-item" href="/">
-              Home
+              New Complaint
             </a>
       
-            <a class="navbar-item" href="/newComplaint">
+            <a class="navbar-item" href="/Complaints">
               All Complaints
             </a>
-      
+            <a class="navbar-item" href="/searchComplaints">
+              Search Complaints
+            </a>
             
           </div>
         </div>
       </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <script>
  document.addEventListener('DOMContentLoaded', () => {
 
