Added aws cognito

--- a/views/allComplaints.ejs
+++ b/views/allComplaints.ejs
@@ -2,7 +2,7 @@
 </head>
 <body>
     <h1 class="title">Please See all the Complaints below:</h1>
-    <div class="container is-max-desktop">
+    <div class="container ">
         <div class="notification is-primary">
             <div class="table-container">
                 <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
@@ -43,5 +43,8 @@
 </div>
     </h2>
 
-
+    <a href="https://bapudham-police-station.auth.us-east-1.amazoncognito.com/logout?client_id=5384va9731820q9pevlg3iqr3j&logout_uri=http%3A%2F%2Flocalhost">
+        <button class="button is-link" >log Off </button>
+    </a>
 </body>
+
